<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/postHeaderid"
        layout="@layout/toolbar_in_other_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/postHeaderid"
        android:layout_marginStart="@dimen/margin_4_dp"
        android:layout_marginTop="@dimen/margin_8_dp"
        android:layout_marginEnd="@dimen/margin_4_dp"
        app:layout_constraintBottom_toTopOf="@+id/include3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postHeaderid">

        <LinearLayout
            android:id="@+id/layoutKeyboardHide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/tvSelectImage"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_4_dp"
                android:layout_marginTop="@dimen/margin_4_dp"
                android:layout_marginEnd="@dimen/margin_4_dp"
                android:visibility="visible"
                android:background="@drawable/border_shape"
                android:src="@drawable/upload_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8_dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:padding="@dimen/padding_4_dp"
                    android:text="@string/month_from"
                    android:textColor="@color/blackColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@string/colon"
                    android:textColor="@color/blackColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spPostAdMonthId"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:padding="@dimen/padding_4_dp"
                    android:text="@string/category"
                    android:textColor="@color/blackColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@string/colon"
                    android:textColor="@color/blackColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spPostAdCatagoryId"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                </Spinner>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:padding="@dimen/padding_4_dp"
                    android:text="@string/how_many"
                    android:textColor="@color/blackColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@string/colon"
                    android:textColor="@color/blackColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etPostAdSeatId"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/border_shape"
                    android:hint="@string/number_of_seat"
                    android:inputType="number"
                    android:lines="10"
                    android:padding="@dimen/padding_8_dp"
                    android:textColor="@color/blackColor"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:padding="@dimen/padding_4_dp"
                    android:text="@string/which_floor"
                    android:textColor="@color/blackColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@string/colon"
                    android:textColor="@color/blackColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etPostAdFloorId"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/border_shape"
                    android:hint="@string/number_of_floor"
                    android:inputType="text"
                    android:padding="@dimen/padding_8_dp"
                    android:textColor="@color/blackColor"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:padding="@dimen/padding_4_dp"
                    android:text="@string/rent_tk"
                    android:textColor="@color/blackColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@string/colon"
                    android:textColor="@color/blackColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etPostAdRentId"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/border_shape"
                    android:hint="@string/rent"
                    android:inputType="number"
                    android:padding="@dimen/padding_8_dp"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:padding="@dimen/padding_4_dp"
                    android:text="@string/location"
                    android:textColor="@color/blackColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@string/colon"
                    android:textColor="@color/blackColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <AutoCompleteTextView
                    android:id="@+id/actvPostAdLocationid"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/border_shape"
                    android:hint="@string/your_location"
                    android:inputType="textCapSentences"
                    android:padding="@dimen/padding_8_dp"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8_dp"
                android:padding="@dimen/padding_4_dp"
                android:text="@string/address"
                android:textColor="@color/blackColor"
                android:textSize="18sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/etPostAdAddressId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_4_dp"
                android:layout_marginEnd="@dimen/margin_4_dp"
                android:background="@drawable/border_shape"
                android:gravity="start"
                android:hint="@string/sampleAddress"
                android:inputType="textMultiLine|textCapSentences"
                android:lines="2"
                android:maxLines="3"
                android:minLines="2"
                android:padding="16dp"
                android:scrollbars="vertical"
                android:textCursorDrawable="@null" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8_dp"
                android:padding="@dimen/padding_4_dp"
                android:text="@string/facilities"
                android:textColor="@color/blackColor"
                android:textSize="18sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/etPostAdDescriptionId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_4_dp"
                android:layout_marginEnd="@dimen/margin_4_dp"
                android:background="@drawable/border_shape"
                android:gravity="start"
                android:inputType="textMultiLine|textCapSentences"
                android:hint="@string/sampleFacilities"
                android:lines="8"
                android:maxLines="3"
                android:minLines="10"
                android:padding="16dp"
                android:scrollbars="vertical"
                android:textCursorDrawable="@null" />


            <Button
                android:id="@+id/btPostAdButtonId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_design"
                android:paddingStart="70dp"
                android:paddingEnd="70dp"
                android:text="@string/post"
                android:textColor="@color/whiteColor"
                android:textSize="20sp" />

            <ProgressBar
                android:id="@+id/pbPostAdProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:indeterminate="true"
                android:indeterminateDrawable="@drawable/progress_color"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvPostAdErrorMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="@dimen/margin_24_dp"
                android:gravity="center"
                android:textColor="#FF0909"
                android:textSize="20sp" />
        </LinearLayout>


    </ScrollView>


    <include
        android:id="@+id/include3"
        layout="@layout/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>


