<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/basicColor"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/navProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/margin_8_dp"
            android:layout_marginTop="@dimen/margin_4_dp"
            android:layout_marginBottom="@dimen/margin_4_dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_profile" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_16_dp"
            android:gravity="center_vertical"
            android:text="@string/profile"
            android:textColor="@color/whiteColor"
            android:textSize="@dimen/navigation_textSize"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/navOwnPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/margin_8_dp"
            android:layout_marginTop="@dimen/margin_4_dp"
            android:layout_marginBottom="@dimen/margin_4_dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/my_post" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_16_dp"
            android:gravity="center_vertical"
            android:text="@string/your_posts"
            android:textColor="@color/whiteColor"
            android:textSize="@dimen/navigation_textSize"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/navCreatePost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/margin_8_dp"
            android:layout_marginTop="@dimen/margin_4_dp"
            android:layout_marginBottom="@dimen/margin_4_dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/create_post" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_16_dp"
            android:gravity="center_vertical"
            android:text="@string/create_post"
            android:textColor="@color/whiteColor"
            android:textSize="@dimen/navigation_textSize"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/navFilterSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/margin_8_dp"
            android:layout_marginTop="@dimen/margin_4_dp"
            android:layout_marginBottom="@dimen/margin_4_dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/filter_search" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_16_dp"
            android:gravity="center_vertical"
            android:text="@string/filter_search"
            android:textColor="@color/whiteColor"
            android:textSize="@dimen/navigation_textSize"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/navFavorites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/margin_8_dp"
            android:layout_marginTop="@dimen/margin_4_dp"
            android:layout_marginBottom="@dimen/margin_4_dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_favorite_white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_16_dp"
            android:gravity="center_vertical"
            android:text="@string/favorites"
            android:textColor="@color/whiteColor"
            android:textSize="@dimen/navigation_textSize"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>